--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8" />
-	<meta description="Pagina de personas atractivas" />
+	<meta name="description" content="Pagina de personas atractivas" />
 	<title>Puls2014: Comunidad de personas atractivas y sexys.</title>
+	<link rel="stylesheet" href="normalize.css">
+	<link rel="stylesheet" href="estilos.css">
 </head>
 <body>
 	<header>
@@ -43,15 +45,15 @@
 			<div class="datos_item">
 				<a href="#" class="tag_item">pony</a>
 				<span class="fecha_item">
-					hace <strong>5</strong> minutos
+					hace <strong>5</strong> min
 				</span>
 			</div>	
 			<div class="votacion">
-				<a href="#" class="up"></a>
+				<a href="#" class="up">U</a>
 				720
-				<a href="#" class="down"></a>
+				<a href="#" class="down">D</a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item"></a>
+				<a href="#" class="guardar_item">X</a>
 			</div>
 		</article>
 	</section>
