--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="description" content="Pagina de personas atractivas" />
+	<meta name="viewport" content="width=device-width, minimun-scale=1, maximun-scale=1" />
 	<title>Puls2014: Comunidad de personas atractivas y sexys.</title>
+	<link href='http://fonts.googleapis.com/css?family=Open+Sans:700,400' rel='stylesheet' type='text/css'>
 	<link rel="stylesheet" href="normalize.css">
 	<link rel="stylesheet" href="estilos.css">
 </head>
@@ -27,10 +29,17 @@
 			<li><a href="#">CSS3</a></li>
 			<li><a href="#">Django</a></li>
 			<li id="publicar_nav">
-				<a href="#">Publicar</a>
+				<a href="#" class="icon-lapiz"> Publicar</a>
 			</li>
 		</ul>
 	</nav>
+	<aside>
+		<video width="320" height="240" autoplay>
+	  		<source src="lecturas.m4v" type="video/mp4">
+	  		<source src="lecturas.ogg" type="video/ogg">
+				<!-- Your browser does not support. --> 
+		</video>
+	</aside>
 	<section id="contenido">
 		<article class="item">
 			<figure class="imagen_item">
@@ -49,11 +58,83 @@
 				</span>
 			</div>	
 			<div class="votacion">
-				<a href="#" class="up">U</a>
+				<a href="#" class="up icon-flecha-arriba"></a>
 				720
-				<a href="#" class="down">D</a>
+				<a href="#" class="down icon-flecha-abajo"></a>
 				<a href="#" class="comentarios_item">69</a>
-				<a href="#" class="guardar_item">X</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">Tìtulo del Articulo</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Muñoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>	
+			<div class="votacion">
+				<a href="#" class="up icon-flecha-arriba"></a>
+				720
+				<a href="#" class="down icon-flecha-abajo"></a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">Tìtulo del Articulo</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Muñoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>	
+			<div class="votacion">
+				<a href="#" class="up icon-flecha-arriba"></a>
+				720
+				<a href="#" class="down icon-flecha-abajo"></a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
+			</div>
+		</article>
+		<article class="item">
+			<figure class="imagen_item">
+				<img src="imagen.jpg" />
+			</figure>
+			<h2 class="titulo_item">
+				<a href="#">Tìtulo del Articulo</a>
+			</h2>
+			<div class="autor_item">
+				por <a href="#">Joana Muñoz</a>
+			</div>
+			<div class="datos_item">
+				<a href="#" class="tag_item">pony</a>
+				<span class="fecha_item">
+					hace <strong>5</strong> min
+				</span>
+			</div>	
+			<div class="votacion">
+				<a href="#" class="up icon-flecha-arriba"></a>
+				720
+				<a href="#" class="down icon-flecha-abajo"></a>
+				<a href="#" class="comentarios_item">69</a>
+				<a href="#" class="guardar_item icon-estrella"></a>
 			</div>
 		</article>
 	</section>
